# picnix

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  agents.md  app.py  cs5.md  design-context.md  docker-compose.yml  email_utils.py  next_milestone.md  pyproject.toml
config/: __init__.py  settings.py
docs/: cs5.md  design-context.md  future-scope.md  known-place-issues.md  next_milestone.md
docs/adr/: ADR-001-langgraph-orchestration.md  ADR-002-vertex-ai-gemini.md  ADR-003-candidate-pool-limits.md  ADR-004-interrupt-before-n4.md  ADR-005-dynamic-food-search.md  ADR-006-n5-n6-swap.md  ADR-007-multi-destination-routing.md  ADR-008-n8-plan-editor.md  ADR-009-phoenix-observability.md  ADR-010-backend-auth-persistence.md  ADR-011-resend-email-verification.md  ADR-012-gemini-retry-backoff.md  ADR-013-trip-auditor-mcp.md  README.md
docs/superpowers/: status.md
docs/superpowers/checkpoints/: 2026-06-06-dynamic-food-availability.md  2026-06-06-n5-structured-validator.md  2026-06-06-n6-n7-streamlit-demo.md  2026-06-06-n6-response-schema-fix.md
docs/superpowers/plans/: 2026-05-31-bootstrap.md  2026-05-31-tool-layer.md  2026-06-01-validated-suggestion-queue.md
docs/superpowers/specs/: 2026-06-01-validated-suggestion-queue-design.md
graph/: __init__.py  graph.py  state.py
graph/nodes/: __init__.py  n1_intent.py  n2_isochrone.py  n3_validator.py  n4_route.py  n5_validator.py  n6_composer.py  n7_formatter.py  n8_editor.py  time_utils.py
observability/: __init__.py  bootstrap.py
pages/: 1_Trip_Auditor.py
persistence/: __init__.py  database.py
persistence/migrations/: 20260611_email_verification.sql
tests/: test_app_helpers.py  test_database.py  test_deployment.py  test_email_utils.py  test_graph.py  test_graph_flow.py  test_n1_intent.py  test_n2_isochrone.py  test_n3_validator.py  test_n4_route.py  test_n5_validator.py  test_n6_composer.py  test_n7_formatter.py  test_n8_editor.py  test_observability.py  test_settings.py  test_state.py  test_time_utils.py  test_tools.py  test_trip_auditor.py
tools/: __init__.py  gmaps.py  graph_viz.py  mapbox.py  vertex.py
