[project]
name = "picnix"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langgraph>=1.2.2",
    "pydeck>=0.9.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[project.optional-dependencies]
viz = [
    "pygraphviz",  # requires graphviz system library (apt install graphviz libgraphviz-dev)
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "live: opt-in tests that call external services",
]
